cmake_minimum_required(VERSION 2.4)

message("Configuring main module.")

project (Spruce)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/main.cpp ${CMAKE_CURRENT_BINARY_DIR}/main.cpp)

ADD_EXECUTABLE(spruce 	${CMAKE_CURRENT_BINARY_DIR}/main.cpp)

TARGET_LINK_LIBRARIES(spruce utils)

install (	FILES "${CMAKE_BINARY_DIR}/bin/spruce"
			DESTINATION bin
			PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)




